UC14: Handle Invalid Bogie Capacity (Custom Exception)